    - Fixed a typo causing all mob spawns in towns to be prevented, no matter the town/world setting.
    - plot price is now configurable at the plot level as well as town. '/plot forsale 100' puts that plot up for 100. If no price is specified it will use the towns plotprice.
    - Added permissions prefix and suffix node support. It now applies them to chat (group prefix, User Prefix, Towny prefix, playername, Towny suffix, Group Suffix, User Suffix).
    - Added saving of the Pitch and Yaw of town spawns.
    - Added a new permission node 'towny.cheat.bypass'. Disables the anti cheat code for those players with the node.
    - If the capital of a nation is removed due to failure to pay upkeep the town with the highest resident count in that nation will become the Capital.
    - Added ability to update Towny.jar (replacing config.yml and english yml) with the server running.
    - Added a new permisison node 'towny.top' to restrict access to the towny top commands.
    - Fixed the welcome message so it correctly uses the player name.
v0.73.3:
    - Config and english yml's are now written as UTF-8 encoded to allow for easy editing with foreign characters.
    - Added a depends entry to the config.yml to prevent world.txt corruption if Towny loads before Multiverse.
    - Added a white suffix to town and nation chat to fix a compatability issue with herochat.
    - Added getTownName and isWilderness functions to the Towny API (inherit ca.xshade.bukkit.towny.TownyUniverse)
    - If a mayor is deleted due to inactivity a new mayor is chosen from the assistants. If there are no assistants a random resident will be promoted.
    - Removed 'allow_resident_plots' and replaced with a permission node 'towny.town.plot'. This node is required to have access to the plot commands.
    - Blocked creating towns named 'spawn' and renaming towns to 'spawn'. Breaks many other functions if towns are named 'spawn'.